# beatgame

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
