[package]
name = "beatgame"
version = "0.1.0"
edition = "2021"

# slight optomization on user code
[profile.dev]
opt-level = 1

# optomize deps
[profile.dev.package."*"]
opt-level = 3

# lto on release
[profile.release]
lto = "thin"

[dependencies]
bevy = "0.12.0"

# dynamically link bevy in dev
[dev-dependencies.bevy]
version = "*"
features = ["dynamic_linking"]